--- a/index.html
+++ b/index.html
@@ -1,13 +1,21 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Maison Sofa | Luxury Living</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description"
+    content="Découvrez Maison Sofa, votre destination pour des canapés de luxe et un mobilier haut de gamme. Confort, élégance et savoir-faire français." />
+  <meta name="keywords" content="canapé, luxe, mobilier, salon, design, confort, maison sofa, france" />
+  <meta name="author" content="Hélène Pagniez" />
+  <meta name="publisher" content="Hélène Pagniez" />
+  <title>Maison Sofa | Luxury Living</title>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
