--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta name="keywords" content="canapé, luxe, mobilier, salon, design, confort, maison sofa, france" />
   <meta name="author" content="Hélène Pagniez" />
   <meta name="publisher" content="Hélène Pagniez" />
-  <title>Maison Sofa | Luxury Living</title>
+  <title>Maison Sofa : Canapés de Luxe, Mobilier & Savoir-Faire Français</title>
 </head>
 
 <body>
